# GestaoEventos

backend/: main.py  pyproject.toml  schema.prisma
backend/app/: models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  security.py
backend/app/crud/: participant.py
